--- a/index.html
+++ b/index.html
@@ -5,6 +5,45 @@
     <link rel="icon" type="image/svg+xml" href="/assets/icons/linkedin.svg"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>Svetlana Gorbova</title>
+
+    <meta name="description" content="Svetlana Gorbova — Senior Property Consultant in Dubai with 20+ years of experience. Specializes in residential and commercial property investments. Over 100 successful deals and AED 150M+ in investment volume.">
+    <meta name="keywords" content="Svetlana Gorbova, Dubai real estate, property consultant, investments, MAK Developers, Isola Bella, Saddlewood Park, residential, commercial, UAE, property sales, investment, real estate expert">
+    <meta name="author" content="Svetlana Gorbova">
+
+    <meta property="og:title" content="Svetlana Gorbova — Senior Property Consultant in Dubai">
+    <meta property="og:description" content="20+ years in Dubai. 100+ closed deals. AED 150M+ investment volume. Specializing in residential and commercial property investments.">
+    <meta property="og:image" content="/assets/images/hero_person.png">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://www.linkedin.com/in/sg2023/">
+
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Svetlana Gorbova — Senior Property Consultant in Dubai">
+    <meta name="twitter:description" content="20+ years in Dubai. 100+ closed deals. AED 150M+ investment volume. Specializing in residential and commercial property investments.">
+    <meta name="twitter:image" content="/assets/images/hero_person.png">
+    <meta name="twitter:site" content="@your_twitter_handle">
+
+    <script type="application/ld+json">
+        {
+            "@context": "https://schema.org",
+            "@type": "Person",
+            "name": "Svetlana Gorbova",
+            "jobTitle": "Senior Property Consultant",
+            "worksFor": {
+                "@type": "Organization",
+                "name": "MAK Developers"
+            },
+            "url": "https://www.linkedin.com/in/sg2023/",
+            "image": "/assets/images/hero_person.png",
+            "description": "Senior Property Consultant in Dubai with 20+ years of experience. Over 100 successful deals and AED 150M+ in investment volume. Specializes in residential and commercial property investments.",
+            "sameAs": [
+                "https://www.linkedin.com/in/sg2023/",
+                "https://instagram.com/mr_sandip_2k2",
+                "https://wa.me/971505487435",
+                "https://t.me/+971505487435"
+            ]
+        }
+    </script>
+
     <link rel="stylesheet" href="/src/style.css"/>
 </head>
 <body>
