--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 </head>
 <body>
 
-<main>
+<!-- <main>
     <header class="fixed top-0 left-0 w-full z-30 h-[var(--header-h)]
                bg-gradient-to-b from-black/40 to-transparent backdrop-blur-[2px]">
         <div class="page-container h-full flex items-center justify-between">
@@ -565,7 +565,7 @@
             </div>
         </nav>
     </div>
-</footer>
+</footer> -->
 
 <script type="module" src="/src/main.js"></script>
 </body>
